--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700&family=Poppins:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700&family=Poppins:wght@700&family=Montserrat:wght@500&family=Playfair+Display:wght@500&family=Oswald:wght@500&family=Pacifico&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Cairo', sans-serif;
@@ -18,6 +18,10 @@
     .font-cairo {
         font-family: 'Cairo', sans-serif;
     }
+    .font-montserrat { font-family: 'Montserrat', sans-serif; }
+    .font-playfair { font-family: 'Playfair Display', serif; }
+    .font-oswald { font-family: 'Oswald', sans-serif; }
+    .font-pacifico { font-family: 'Pacifico', cursive; }
   </style>
 <script type="importmap">
 {
