--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     .font-playfair { font-family: 'Playfair Display', serif; }
     .font-oswald { font-family: 'Oswald', sans-serif; }
     .font-pacifico { font-family: 'Pacifico', cursive; }
+    .cursor-zoom-in { cursor: zoom-in; }
   </style>
 <script type="importmap">
 {
@@ -29,7 +30,8 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.26.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0"
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-zoom-pan-pinch": "https://aistudiocdn.com/react-zoom-pan-pinch@^3.6.0"
   }
 }
 </script>
