--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700&family=Poppins:wght@700&family=Montserrat:wght@500&family=Playfair+Display:wght@500&family=Oswald:wght@500&family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700&family=Poppins:wght@700&family=Montserrat:wght@500&family=Playfair+Display:wght@500&family=Oswald:wght@500&family=Pacifico&family=Lobster&family=Bebas+Neue&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Cairo', sans-serif;
@@ -22,6 +22,8 @@
     .font-playfair { font-family: 'Playfair Display', serif; }
     .font-oswald { font-family: 'Oswald', sans-serif; }
     .font-pacifico { font-family: 'Pacifico', cursive; }
+    .font-lobster { font-family: 'Lobster', cursive; }
+    .font-bebas-neue { font-family: 'Bebas Neue', sans-serif; }
     .cursor-zoom-in { cursor: zoom-in; }
   </style>
 <script type="importmap">
