feat: Add new font styles and templates
Introduces several new font families to enhance the design options for ad creation. This includes integrating 'Merriweather', 'Caveat', and 'Roboto Slab' into the application's styling and making them available for use in templates and text styling.

This change also adds new predefined ad templates that leverage these new font styles, providing users with more creative choices for their generated ads.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700&family=Poppins:wght@700&family=Montserrat:wght@500&family=Playfair+Display:wght@500&family=Oswald:wght@500&family=Pacifico&family=Lobster&family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700&family=Poppins:wght@700&family=Montserrat:wght@500&family=Playfair+Display:wght@500&family=Oswald:wght@500&family=Pacifico&family=Lobster&family=Bebas+Neue&family=Merriweather:wght@400&family=Caveat:wght@400&family=Roboto+Slab:wght@400&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Cairo', sans-serif;
@@ -24,6 +24,9 @@
     .font-pacifico { font-family: 'Pacifico', cursive; }
     .font-lobster { font-family: 'Lobster', cursive; }
     .font-bebas-neue { font-family: 'Bebas Neue', sans-serif; }
+    .font-merriweather { font-family: 'Merriweather', serif; }
+    .font-caveat { font-family: 'Caveat', cursive; }
+    .font-roboto-slab { font-family: 'Roboto Slab', serif; }
     .cursor-zoom-in { cursor: zoom-in; }
   </style>
 <script type="importmap">
