--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700&family=Poppins:wght@700&family=Montserrat:wght@500&family=Playfair+Display:wght@500&family=Oswald:wght@500&family=Pacifico&family=Lobster&family=Bebas+Neue&family=Merriweather:wght@400&family=Caveat:wght@400&family=Roboto+Slab:wght@400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700&family=Poppins:wght@700&family=Montserrat:wght@500&family=Playfair+Display:wght@500&family=Oswald:wght@500&family=Pacifico&family=Lobster&family=Bebas+Neue&family=Merriweather:wght@400&family=Caveat:wght@400&family=Roboto+Slab:wght@400&family=Uncial+Antiqua&family=Dancing+Script&family=Staatliches&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Cairo', sans-serif;
@@ -27,6 +27,9 @@
     .font-merriweather { font-family: 'Merriweather', serif; }
     .font-caveat { font-family: 'Caveat', cursive; }
     .font-roboto-slab { font-family: 'Roboto Slab', serif; }
+    .font-uncial { font-family: 'Uncial Antiqua', system-ui; }
+    .font-dancing-script { font-family: 'Dancing Script', cursive; }
+    .font-staatliches { font-family: 'Staatliches', cursive; }
     .cursor-zoom-in { cursor: zoom-in; }
   </style>
 <script type="importmap">
